# Twitch-Bot-Rust

./: .gitignore  112328946_custom_commands.kubes  Cargo.toml  user_rpg_stats112328946-112328946.kubes
src/: Browser.rs  ConsoleComponents.rs  Logger.rs  Secrets.rs  console_components.rs  main.rs  main_tick_data.rs  send_error.rs
src/Credentials/: AccessScopes.rs  BotUserCredentials.rs  ClientId.rs  ClientSecret.rs  mod.rs
src/Debug/: mod.rs
src/IRC/: ChatSession.rs  MessageParser.rs  mod.rs
src/JSON/crawler/: JsonObject.rs  JsonPropertyKey.rs  JsonPropertyValue.rs  PropertyType.rs  Scope.rs  errors.rs  mod.rs
src/OAuth/: HasOauthSignature.rs  Signature.rs  TokenData.rs  ValidationToken.rs  mod.rs
src/User/: OAuthToken.rs  UserData.rs  UserProperties.rs  mod.rs
src/Utilities/: mod.rs
src/WebRequests/: mod.rs
src/credentials/: access_scopes.rs  bot_user_credentials.rs  client_id.rs  client_secret.rs
src/irc/: channel_chatter_data.rs  chat_message_parser.rs  chat_session.rs  default_irc_message_parser.rs  default_message_parser.rs  response_context.rs  syncable_web_socket.rs  twitch_message_type.rs  twitch_user_message.rs  web_socket_session.rs
src/irc_chat/: channel_chatter_data.rs  chat_message_parser.rs  mod.rs  response_context.rs  syncable_web_socket.rs  twitch_message_type.rs  web_socket_session.rs
src/oauth/: has_oauth_signature.rs  token_data.rs  validation_token.rs
src/save_data/: mod.rs
src/user/: oauth_token.rs  user_data.rs  user_properties.rs
src/utilities/: string_ext.rs
src/web_requests/: header.rs  mod.rs
(+71 files in other folders)
