[package]
name = "kubes_twitch_bot"
version = "0.1.0"
authors = ["Kubes' Content <kubescontent@gmail.com>"]
edition = "2018"


[dependencies]
async-trait = "*"
chrono = "*"
colour = "*"
open = "*"
rand = "*"
reqwest = "*"
tokio = { version = "*", features = ["time", "macros", "sync", "tcp"] }
url = "*"
websocket = "*"