[package]
name = "kubes_twitch_bot"
version = "0.1.2"
authors = ["Kubes' Content <kubescontent@gmail.com>"]
edition = "2018"


[dependencies]
kubes_std_lib = { path = "../../RustProjects/kubes_std_lib" }
kubes_web_lib = { path = "../../RustProjects/kubes_web_lib" }
async-trait = "*"
chrono = "*"
colour = "*"
futures = "0.3.12"
lazy_static = "*"
open = "*"
rand = "*"
rand_core = "*"
reqwest = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
socket2 = "*"
tokio = { version = "0.2.25", features = ["full"] } #something requires this version of tokio // reqwest?
url = "*"
websocket = "*"
